<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.activities.HomeActivity"
    android:id="@+id/contenedorPpal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="horizontal"
                    android:id="@+id/espacio"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@color/redTulio"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <TextView
                        android:layout_marginTop="30dp"
                        android:layout_marginStart="12dp"
                        android:layout_weight="0.8"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="¡Hola! Santiago"
                        android:textColor="@color/white"
                        android:textSize="25sp"/>

                    <ImageView
                        android:layout_marginTop="30dp"
                        android:layout_weight="0.2"
                        android:layout_width="0dp"
                        android:layout_height="25dp"
                        android:src="@mipmap/ic_launcher"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lySpinner"
                    android:background="@drawable/spinner_background"
                    android:layout_marginTop="70dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/espacio"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:elevation="2dp">

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:backgroundTint="@color/redTulio"
                        android:id="@+id/spCountries"
                        android:spinnerMode="dialog"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:id="@+id/lyRecomendaciones"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lySpinner">

                    <TextView
                        android:id="@+id/tvRecomendaciones"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recomendaciones"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="12dp"/>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cvRecomendaciones"
                        android:layout_width="match_parent"
                        android:layout_height="130dp"
                        app:cardCornerRadius="10dp"
                        android:background="@color/colorPrimary"
                        android:layout_margin="12dp">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/recomendaciones">

                            <ImageView
                                android:id="@+id/ivRestaurant"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="#66000000"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintRight_toRightOf="parent"
                                app:layout_constraintBottom_toBottomOf="parent"/>

                            <TextView
                                android:gravity="center"
                                android:id="@+id/tvRecipe"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="Los restaurantes, emprendimientos, callejeros y bebidas de tulio recomienda."
                                android:textColor="@color/cardview_light_background"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintRight_toRightOf="parent"
                                android:layout_marginStart="10dp"
                                android:layout_marginBottom="10dp"
                                android:textAlignment="center"/>
                        </androidx.constraintlayout.widget.ConstraintLayout>


                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lyRecetas"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lyRecomendaciones">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tvRecetas"
                            android:layout_width="0dp"
                            android:layout_weight="0.7"
                            android:layout_height="wrap_content"
                            android:text="@string/recetas"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:layout_marginStart="12dp"/>

                        <TextView
                            android:id="@+id/tvSeeMoreRecipes"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.3"
                            android:text="@string/ver_mas"
                            android:textColor="@color/redTulio"
                            android:textSize="15sp"
                            android:layout_marginStart="12dp"/>
                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvRecetas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="false"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                         />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lyMastersEvents"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lyRecetas">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tvMastersEvents"
                            android:layout_width="0dp"
                            android:layout_weight="0.7"
                            android:layout_height="wrap_content"
                            android:text="@string/eventos_master"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:layout_marginStart="12dp"/>

                        <TextView
                            android:id="@+id/tvSeeMoreMaster"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.3"
                            android:text="@string/ver_mas"
                            android:textColor="@color/redTulio"
                            android:textSize="15sp"
                            android:layout_marginStart="12dp"/>
                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvMasters"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="false"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lyTulioTellsYou"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lyMastersEvents">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tvTulioTellsYou"
                            android:layout_width="0dp"
                            android:layout_weight="0.7"
                            android:layout_height="wrap_content"
                            android:text="@string/tulio_te_cuenta"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:layout_marginStart="12dp"/>

                        <TextView
                            android:id="@+id/tvSeeMoreTulioTellsYou"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.3"
                            android:text="@string/ver_mas"
                            android:textColor="@color/redTulio"
                            android:textSize="15sp"
                            android:layout_marginStart="12dp"/>
                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvTulioTellsYou"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="false"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        />
                </LinearLayout>

                <!--<LinearLayout
                    android:id="@+id/lyDiscounts"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lyTulioTellsYou">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tvDiscounts"
                            android:layout_width="0dp"
                            android:layout_weight="0.7"
                            android:layout_height="wrap_content"
                            android:text="@string/descuentos"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:layout_marginStart="12dp"/>

                        <TextView
                            android:id="@+id/tvSeeMoreDiscounts"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.3"
                            android:text="@string/ver_mas"
                            android:textColor="@color/redTulio"
                            android:textSize="15sp"
                            android:layout_marginStart="12dp"/>
                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvDiscounts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="false"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        />
                </LinearLayout>-->
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>